[gd_scene load_steps=4 format=3 uid="uid://bv3m05gqpshp8"]

[ext_resource type="Script" path="res://UI/SettingsUI/MusicSettingsUI.gd" id="1_boh5n"]
[ext_resource type="FontFile" uid="uid://bo46ww57g35wi" path="res://Font/PIXBOB LITE.ttf" id="1_hbv3c"]

[sub_resource type="LabelSettings" id="LabelSettings_i8gii"]
font = ExtResource("1_hbv3c")
font_size = 22
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="MusicSettingsUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_boh5n")

[node name="MusicSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -55.0
offset_right = 62.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2
min_value = -72.0
max_value = 0.0

[node name="MusicLabel" type="Label" parent="MusicSlider"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -36.0
offset_right = -21.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
text = "Music"
label_settings = SubResource("LabelSettings_i8gii")

[node name="SfxSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_right = 62.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
min_value = -72.0
max_value = 0.0

[node name="SfxLabel" type="Label" parent="SfxSlider"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -36.5
offset_right = 54.0
offset_bottom = -12.5
grow_horizontal = 2
grow_vertical = 2
text = "sound effects"
label_settings = SubResource("LabelSettings_i8gii")

[connection signal="value_changed" from="MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="SfxSlider" to="." method="_on_sfx_slider_value_changed"]
